fixed broken styles in admin signin page

--- a/app/assets/stylesheets/v1/_variables.scss
+++ b/app/assets/stylesheets/v1/_variables.scss
@@ -1,3 +1,6 @@
 $primary-color: #D32053;
 $gray-border-color: #CCCCCC;
 $gray-bg-color: #DDDDDD;
+$btn-padding: 8px 12px;
+$label-color: #444444;
+$input-padding: 6px 12px;
